# dockerstack

./: .gitignore  README.md  pyproject.toml
examples/multi_stack/: stack.json
examples/multi_stack/services/elasticsearch/: runtime.py
examples/multi_stack/services/kibana/: runtime.py
examples/multi_stack/services/redis/: redis.conf  runtime.py
src/dockerstack/: __init__.py  cache.py  entrypoint_wrapper.sh  errors.py  logging.py  service.py  stack.py  testing.py  typing.py  utils.py
tests/: conftest.py  test_example.py
