[tool.poetry]
name = "dockerstack"
version = "1.0.0-rc7"
packages = [{include = 'dockerstack', from='src'}]
description = "Docker/python based infra as code framework"
authors = ["Guillermo Rodriguez <guillermo@telos.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.0"
pydantic = "^2.6.1"
docker = "^7.0.0"
networkx = "^3.2.1"
simplejson = "^3.19.2"

[tool.poetry.group.dev.dependencies]
pdbp = "^1.5.0"

[tool.pytest.ini_options]
addopts = "-s"
markers = [
    "stack_config: set launch options for test stack"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
